Rationalize docker support
This commit moves docker-compose support to running the application and
Testcontainers to run the tests:

* Added Testcontainers support for support of creating the Keyspace on
startup when the keyspace is configured
* Moved and harmonize docker compose support and use it rather than
plain Docker commands.

Closes gh-5